[add] react test app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     container_name: ${FRONT_NAME}
     depends_on:
       - backend
+    volumes:
+      - ./frontend:/app
     build:
       context: ./frontend
       dockerfile: Dockerfile
