--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:latest
 WORKDIR /app
 COPY package.json ./
-RUN npm install
-COPY ./ ./
-CMD ["sh", "-c", "node src/test.js"]
+# RUN chmod a+x /app/node_modules/.bin/react-scripts
+# COPY ./ ./
+CMD ["sh", "-c", "npm start"]
