--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,3 @@
 FROM node:latest
 WORKDIR /app
-COPY package.json ./
-# RUN chmod a+x /app/node_modules/.bin/react-scripts
-# COPY ./ ./
-CMD ["sh", "-c", "npm start"]
+CMD ["sh", "-c", "npm install && npm start"]
