[update] container name and versions

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 MYSQL_DATABASE="submission_database"
-MYSQL_HOST="docker_mysql"
+MYSQL_HOST="mysql"
 MYSQL_USER="docker"
 MYSQL_PORT="3306"
 MYSQL_PASSWORD="password"
 MYSQL_ROOT_PASSWORD="root_password"
 MYSQL_DATABASE_NAME="submission_database"
-APP_NAME="test_app"
-FRONT_NAME="test_js"
+BACKEND_NAME="go"
+FRONTEND_NAME="react"
