[update] database setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,4 +2,4 @@ FROM golang:1.22
 WORKDIR /app/backend
 COPY . /app/backend
 RUN go mod download
-CMD ["sh", "-c", "go run src/init/main.go && go run src/server/main.go"]
+CMD ["sh", "-c", "go run src/server/main.go"]
